--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/*Předesílám, že ty modifikátory používám jen proto, 
-že je to povinný prvek zadání. Vůbec se mi tam nehodí :-) 
-Budu případně ráda za tip, pokud pro ně v tomhle projektu nějaké využití je. git push*/
-
 html { box-sizing: border-box; 
 }
 *, :after, :before { box-sizing: inherit; }
@@ -27,12 +23,10 @@ section {
     padding: 50px;
     width: 100%;
 }
-
+/*-----------------------------------------*/
 .header{
       height: 200px;
-}
-.header--background-grey {
-    background-color: rgb(245,244,240);
+      background-color: rgb(245,244,240);
 }
 .header__top {   
     width: 100%;
@@ -52,8 +46,8 @@ section {
     font-size: 20px;
     color: rgb(209,75,67);
 }
-
-.about-me--background-white {
+/*-----------------------------------------*/
+.about-me {
 background-color: white;
 }
 .about-me__container {   
@@ -82,8 +76,89 @@ padding-right: 30px;
     border: solid 2px rgb(209,75,67);
     border-radius: 50%;
 }
+@media (max-width: 800px) {
+    .about-me__container {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, auto);
+    place-items: center;   
+    column-gap: 0px;
+    }
+     .about-me h2 {
+         grid-row: 1/2;  
+         grid-column: 1/2;    
+     }
+     .about-me__text {
+         grid-row: 2/3;
+         grid-column: 1/2;
+         text-align: center;
+         padding-right: 0;
+     }
+     .about-me__photo {
+         grid-row: 4/4;
+         grid-column: 1/2;
+     }
 
-.my-work--background-grey {
+}
+
+/*------Cvičení------------------*/
+.practice-bem-and-grid {
+    background-color: rgb(245,244,240);
+   
+}
+.practice-bem-and-grid__container {
+    width: 70%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(90px, 150px));   
+    grid-template-rows: repeat(3, auto);
+    grid-gap: 10px;
+    place-content: center;
+}
+.practice-bem-and-grid__container h2 {
+    grid-column: 1/5;
+    grid-row: 1/2;
+}
+.text-in-box {
+    height: 1rem;
+    margin-top: calc((100% - 1rem) / 2);
+}
+.practice__box--green {
+    background-color: rgb(127,210,186);
+
+}
+.practice__box--yellow {
+    background-color: rgb(255,218,117);
+    
+}
+.practice__box--blue {
+    background-color: rgb(166,223,247);
+    
+}
+.practice__box--pink {
+    background-color: rgb(212,161,182);
+    
+}
+.practice__box--green, .practice__box--yellow, .practice__box--blue, .practice__box--pink {
+    width: 70px;
+    height:  70px;
+    margin: 10px;
+    border-radius: 10%;
+    align-self: center;
+    justify-self: center;
+}
+
+@media (max-width: 600px) {
+    .practice-bem-and-grid__container {
+        grid-template-columns: auto auto;
+        grid-auto-rows: auto;
+    }
+    .practice-bem-and-grid__container h2 {
+        grid-column: 1/3;
+    }
+}
+/*------------------------------------------------*/
+
+.my-work {
     background-color: rgb(245,244,240);
 }
 .my-work__container {
@@ -102,30 +177,47 @@ padding-right: 30px;
     grid-row: 2/2;    
 }
 
-.my-projects--background-white {
+/*-------------------------------------*/
+.my-projects {
     background-color: white;
 }
 .my-projects__container {
-    width: 50%;
+    width: 70%;
     margin: 0 auto;  
     display: grid;
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
     grid-template-columns: repeat(3, 33%);
     grid-gap: 20px;
     place-items: center;
 }
 .my-projects h2 {
-    grid-row: 1/span 1;
-    grid-column: 1/span 3;
+    grid-row: 1/2;
+    grid-column: 1/4;
 }
-.my-projects__box {
-    grid-row: 2/2; 
+@media (max-width: 900px) {
+    .my-projects__web-picture, .my-projects__react-picture {
+       display: none;
+    }
+    .my-projects__container  {
+       grid-template-columns: auto;
+       grid-template-rows: repeat(3, auto);
+       grid-gap: 0;
+    }
+    .my-projects h2 {
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+    .my-projects h3 {       
+        grid-column: 1/2;
+        margin-top: 40px;   
+        margin-bottom: 0;    
+    }
 }
-
+/*-------------------------------------------*/
 .contact--background-grey {
     background-color: rgb(245,244,240);
 }
-
+/*---------------------------------------------*/
 .footer--background-red {
     background-color:rgb(209,75,67);
     color:rgb(245,244,240);
