Úkol 2 - grid - drobná oprava

--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ padding-right: 30px;
     }
 }
 /*-------------------------------------------*/
-.contact--background-grey {
+.contact {
     background-color: rgb(245,244,240);
 }
 /*---------------------------------------------*/
