--- a/styles.css
+++ b/styles.css
@@ -1,225 +1,336 @@
-html { box-sizing: border-box; 
-}
-*, :after, :before { box-sizing: inherit; }
-
-body {  
-    margin:0;
-    padding: 0;  
-    font-family: 'Roboto', sans-serif;
-    color: rgb(88, 88, 88);
-    text-align: center;
+@charset "UTF-8";
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-header, h1, h2 {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
+*,
+:after,
+:before {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  color: #585858;
+  text-align: center;
+}
+
+header,
+h1,
+h2 {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
 
 h2 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 section {
-    padding: 50px;
-    width: 100%;
+  padding: 50px;
+  width: 100%;
 }
-/*-----------------------------------------*/
-.header{
-      height: 200px;
-      background-color: rgb(245,244,240);
-}
-.header__top {   
-    width: 100%;
-    height: 20px;
-    background-color: rgb(209,75,67);
-}
-.header__title {  
-    margin: 50px auto;
 
+/*-----------------------------------------*/
+.header {
+  height: 200px;
+  background-color: #f5f4f0;
 }
+
+.header__top {
+  width: 100%;
+  height: 20px;
+  background-color: #d14b43;
+}
+
+.header__title {
+  margin: 50px auto;
+}
+
 .header__title-fname {
-    font-size: 40px;
-    color: rgb(209,75,67);
-    letter-spacing: 2px;
+  font-size: 40px;
+  color: #d14b43;
+  letter-spacing: 2px;
 }
+
 .header__title-sname {
-    font-size: 20px;
-    color: rgb(209,75,67);
+  font-size: 20px;
+  color: #d14b43;
 }
+
 /*-----------------------------------------*/
 .about-me {
-background-color: white;
+  background-color: white;
 }
-.about-me__container {   
-    width: 50%;
-    margin: 0 auto;   
-    display: grid;
-    grid-template-areas:
-    "header header" 
-    "text photo";
-    grid-gap: 20px;
-}
-.about-me h2 {
-    grid-area: header;    
-}
-.about-me__text {
-grid-area: text; 
-text-align: left;
-line-height: 1.5;
-padding-right: 30px;
-}
-.about-me__photo {
-    grid-area: photo;   
-}
-.about-me__photo {
-    width: 150px;
-    border: solid 2px rgb(209,75,67);
-    border-radius: 50%;
-}
-@media (max-width: 800px) {
-    .about-me__container {
-    grid-template-columns: auto;
-    grid-template-rows: repeat(3, auto);
-    place-items: center;   
-    column-gap: 0px;
-    }
-     .about-me h2 {
-         grid-row: 1/2;  
-         grid-column: 1/2;    
-     }
-     .about-me__text {
-         grid-row: 2/3;
-         grid-column: 1/2;
-         text-align: center;
-         padding-right: 0;
-     }
-     .about-me__photo {
-         grid-row: 4/4;
-         grid-column: 1/2;
-     }
 
+.about-me__container {
+  width: 50%;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "header header" "text photo";
+  grid-gap: 20px;
+}
+
+.about-me h2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: header;
+}
+
+.about-me__text {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: text;
+  text-align: left;
+  line-height: 1.5;
+  padding-right: 30px;
+}
+
+.about-me__photo {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: photo;
+  width: 150px;
+  border: solid 2px #d14b43;
+  border-radius: 50%;
+}
+
+@media (max-width: 800px) {
+  .about-me__container {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+    place-items: center;
+    -webkit-column-gap: 0px;
+            column-gap: 0px;
+  }
+  .about-me h2 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .about-me__text {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    text-align: center;
+    padding-right: 0;
+  }
+  .about-me__photo {
+    -ms-grid-row: 4;
+    grid-row: 4/4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
 }
 
 /*------Cvičení------------------*/
-.practice-bem-and-grid {
-    background-color: rgb(245,244,240);
-   
+.practice {
+  background-color: #f5f4f0;
 }
-.practice-bem-and-grid__container {
-    width: 70%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(4, minmax(90px, 150px));   
-    grid-template-rows: repeat(3, auto);
-    grid-gap: 10px;
-    place-content: center;
-}
-.practice-bem-and-grid__container h2 {
-    grid-column: 1/5;
-    grid-row: 1/2;
-}
-.text-in-box {
-    height: 1rem;
-    margin-top: calc((100% - 1rem) / 2);
-}
-.practice__box--green {
-    background-color: rgb(127,210,186);
 
+.practice__container {
+  width: 70%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(90px, 150px))[4];
+      grid-template-columns: repeat(4, minmax(90px, 150px));
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+  grid-gap: 10px;
+  place-content: center;
 }
+
+.practice__container h2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1/5;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+.practice__text-in-box {
+  height: 1rem;
+  margin-top: calc((100% - 1rem) / 2);
+}
+
+.practice__box--green {
+  background-color: #7fd2ba;
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+  border-radius: 10%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
 .practice__box--yellow {
-    background-color: rgb(255,218,117);
-    
+  background-color: #ffda75;
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+  border-radius: 10%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
+
 .practice__box--blue {
-    background-color: rgb(166,223,247);
-    
+  background-color: #a6dff7;
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+  border-radius: 10%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
+
 .practice__box--pink {
-    background-color: rgb(212,161,182);
-    
-}
-.practice__box--green, .practice__box--yellow, .practice__box--blue, .practice__box--pink {
-    width: 70px;
-    height:  70px;
-    margin: 10px;
-    border-radius: 10%;
-    align-self: center;
-    justify-self: center;
+  background-color: #d4a1b6;
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+  border-radius: 10%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 @media (max-width: 600px) {
-    .practice-bem-and-grid__container {
+  .practice__container {
+    -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
-        grid-auto-rows: auto;
-    }
-    .practice-bem-and-grid__container h2 {
-        grid-column: 1/3;
-    }
-}
-/*------------------------------------------------*/
-
-.my-work {
-    background-color: rgb(245,244,240);
-}
-.my-work__container {
-    width: 50%;
-    margin: 0 auto;  
-    display: grid;
-    grid-template-rows: repeat(2, auto);
-    grid-template-columns: repeat(4, 25%);
-    grid-gap: 20px;
-}
-.my-work h2 {
-    grid-row: 1/span 1;
-    grid-column: 1/span 4;
-}
-.my-work__box {
-    grid-row: 2/2;    
+    grid-auto-rows: auto;
+    grid-gap: 10px;
+  }
+  .practice__container h2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
 }
 
+/*------------------------------------------------
+     to replace for the practice section
+
+    .my-work {
+        background-color: $odd-background-color;
+
+        &__container {
+            width                : 50%;
+            margin               : 0 auto;
+            display              : grid;
+            grid-template-rows   : repeat(2, auto);
+            grid-template-columns: repeat(4, 25%);
+            grid-gap             : 20px;
+        }
+
+        h2 {
+            grid-row   : 1/span 1;
+            grid-column: 1/span 4;
+        }
+
+        &__box {
+            grid-row: 2/2;
+        }
+    }
+ */
 /*-------------------------------------*/
 .my-projects {
-    background-color: white;
+  background-color: white;
 }
+
 .my-projects__container {
-    width: 70%;
-    margin: 0 auto;  
-    display: grid;
-    grid-template-rows: repeat(3, auto);
-    grid-template-columns: repeat(3, 33%);
-    grid-gap: 20px;
-    place-items: center;
+  width: 70%;
+  margin: 0 auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+  -ms-grid-columns: (33%)[3];
+      grid-template-columns: repeat(3, 33%);
+  grid-gap: 20px;
+  place-items: center;
 }
+
 .my-projects h2 {
-    grid-row: 1/2;
-    grid-column: 1/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
 }
+
 @media (max-width: 900px) {
-    .my-projects__web-picture, .my-projects__react-picture {
-       display: none;
-    }
-    .my-projects__container  {
-       grid-template-columns: auto;
-       grid-template-rows: repeat(3, auto);
-       grid-gap: 0;
-    }
-    .my-projects h2 {
-        grid-row: 1/2;
-        grid-column: 1/2;
-    }
-    .my-projects h3 {       
-        grid-column: 1/2;
-        margin-top: 40px;   
-        margin-bottom: 0;    
-    }
+  .my-projects__web-picture {
+    display: none;
+  }
+  .my-projects__react-picture {
+    display: none;
+  }
+  .my-projects__container {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+    grid-gap: 0;
+  }
+  .my-projects h2 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .my-projects h3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    margin-top: 40px;
+    margin-bottom: 0;
+  }
 }
+
 /*-------------------------------------------*/
 .contact {
-    background-color: rgb(245,244,240);
+  background-color: #f5f4f0;
 }
+
 /*---------------------------------------------*/
 .footer--background-red {
-    background-color:rgb(209,75,67);
-    color:rgb(245,244,240);
-    padding: 20px;
+  background-color: #d14b43;
+  color: white;
+  padding: 20px;
 }
+/*# sourceMappingURL=styles.css.map */
