--- a/styles.scss
+++ b/styles.scss
@@ -137,7 +137,7 @@ section {
   }
 }
 
-/*------Cvičení------------------*/
+/*------Cvičení-----------------
 
 .practice {
   background-color: $odd-background-color;
@@ -185,11 +185,11 @@ section {
 
 @media (max-width: 600px) {
   .practice {
-    &__container {     
+    &__container {
       grid-template-columns: auto auto;
       grid-auto-rows: auto;
-      grid-gap: 10px;      
-  
+      grid-gap: 10px;
+
       h2 {
         grid-column: 1/3;
         grid-row: 1/2;
@@ -197,31 +197,72 @@ section {
     }
   }
 }
-/*------------------------------------------------
-     to replace for the practice section
-
-    .my-work {
-        background-color: $odd-background-color;
-
-        &__container {
-            width                : 50%;
-            margin               : 0 auto;
-            display              : grid;
-            grid-template-rows   : repeat(2, auto);
-            grid-template-columns: repeat(4, 25%);
-            grid-gap             : 20px;
-        }
-
-        h2 {
-            grid-row   : 1/span 1;
-            grid-column: 1/span 4;
-        }
-
-        &__box {
-            grid-row: 2/2;
-        }
+--------------------------------*/
+.my-work {
+  background-color: $odd-background-color;
+  &__container {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(2, auto);
+    grid-row-gap: 50px;
+    grid-column-gap: 40px;
+    align-items: start;
+    place-content: center;
+  }
+  h2 {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 4;
+  }
+  &__box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__heading {
+    height: 111px;
+  }
+  &__icon-wrapper {
+    max-width: 100px;
+    min-width: 70px;
+    &--lang {
+      padding-top: 4px;
     }
- */
+    &--html {
+      padding-top: 3px;
+    }
+  }
+  &__title {
+    font-weight: bold;
+    &--lang {
+      padding-top: 7px;
+    }
+    &--html {
+      padding-top: 9px;
+    }
+    &--react {
+      padding-top: 3px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .my-work {
+    &__container {
+      width: 70%;
+      grid-template-columns: repeat(2, minmax(100px, 50%));
+      grid-auto-rows: auto;
+      grid-gap: 30px;
+
+      h2 {
+        grid-column: 1/3;
+        grid-row: 1/2;
+      }
+    }
+  }
+}
+
 /*-------------------------------------*/
 .my-projects {
   background-color: $even-background-color;
@@ -230,43 +271,64 @@ section {
     width: 70%;
     margin: 0 auto;
     display: grid;
-    grid-template-rows: repeat(3, auto);
-    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(2, 50%);
     grid-gap: 20px;
-    place-items: center;
+    place-content: center;
   }
-
   h2 {
     grid-row: 1/2;
-    grid-column: 1/4;
+    grid-column: 1/3;
+  }
+  &__project--web {
+    place-items: start;
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  &__project--react {
+    place-items: start;
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  a {
+    color: $primary-color;
+    text-decoration: none;
+    &:hover {
+      font-weight: bold;
+     
+      color: $contrast-color;
+      #link-icon {        
+          path {
+            fill: $contrast-color;
+          }        
+      }
+    }
+  }
+ 
+  &__link--icon {
+    vertical-align: middle;
   }
 }
 
 @media (max-width: 900px) {
   .my-projects {
-    &__web-picture {
-      display: none;
-    }
-
-    &__react-picture {
-      display: none;
-    }
-
     &__container {
       grid-template-columns: auto;
-      grid-template-rows: repeat(3, auto);
-      grid-gap: 0;
+      grid-auto-rows: auto;
     }
-
     h2 {
       grid-row: 1/2;
       grid-column: 1/2;
     }
-
-    h3 {
+    &__project--web {
+      grid-row: 2/3;
       grid-column: 1/2;
-      margin-top: 40px;
-      margin-bottom: 0;
+      place-items: center;
+    }
+    &__project--react {
+      grid-row: 3/4;
+      grid-column: 1/2;
+      place-items: center;
     }
   }
 }
@@ -281,4 +343,113 @@ section {
   background-color: $contrast-color;
   color: $even-background-color;
   padding: 20px;
+}
+
+/*--------------Animace SVG ikon----------------*/
+
+/*Ikona překladatel*/
+#lang-skill-icon {
+  width: 70px;
+  padding-top: 6px;
+  transition: animation 1.5s;
+  &:hover {
+    #earth {
+      animation: rotateY 2s ease;
+    }
+  }
+  &:hover {
+    #border {
+      animation: resize 1.2s ease;
+    }
+  }
+}
+#earth,
+#border {
+  transform-origin: center;
+}
+
+@keyframes rotateY {
+  to {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes resize {
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/*Ikona HTML*/
+#html-icon {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding-top: 0px;
+  transition: fill 0.4s ease-in-out;
+  &:hover {
+    fill: #e54d26;
+  }
+  &:hover {
+    #inner-letter {
+      animation: resize-letter 1.2s ease;
+    }
+  }
+}
+#inner-letter {
+  transform-origin: 50% 57%;
+}
+@keyframes resize-letter {
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/*Ikona JS*/
+#JS-icon {
+  min-width: 88px;
+}
+
+#J-letter,
+#S-letter {
+  transform-origin: 50% 57%;
+}
+#JS-icon {
+  &:hover {
+    #J-letter {
+      animation: resize-letter 1.2s ease;
+    }
+    #S-letter {
+      animation: resize-letter 1.2s ease;
+    }
+  }
+}
+
+/*Ikona React*/
+#react-icon {
+  width: 75px;
+  padding-top: 8px;
+  &:hover {
+    .st0 {
+      animation: rotateZ 5s ease;
+    }
+    #circle {
+      animation: resize-letter 5s ease;
+    }
+  }
+}
+.st0,
+#circle {
+  transform-origin: center;
+}
+@keyframes rotateZ {
+  to {
+    transform: rotateZ(360deg);
+  }
 }
