--- a/styles.css
+++ b/styles.css
@@ -362,28 +362,26 @@ section {
 }
 
 /*--------------Animace SVG ikon----------------*/
-/*Ikona překladatel*/
-#lang-skill-icon {
-  width: 70px;
-  padding-top: 6px;
+/*Animace na scroll down - spouštěná JS*/
+.animate-lang-icon {
   -webkit-transition: -webkit-animation 1.5s;
   transition: -webkit-animation 1.5s;
   transition: animation 1.5s;
   transition: animation 1.5s, -webkit-animation 1.5s;
 }
 
-#lang-skill-icon:hover #earth {
+.animate-lang-icon #earth {
   -webkit-animation: rotateY 2s ease;
           animation: rotateY 2s ease;
 }
 
-#lang-skill-icon:hover #border {
+.animate-lang-icon #border {
   -webkit-animation: resize 1.2s ease;
           animation: resize 1.2s ease;
 }
 
-#earth,
-#border {
+.animate-lang-icon #earth,
+.animate-lang-icon #border {
   -webkit-transform-origin: center;
           transform-origin: center;
 }
@@ -424,6 +422,143 @@ section {
   }
 }
 
+.animate-html-icon #html-icon {
+  -webkit-transition: fill 0.4s ease-in-out;
+  transition: fill 0.4s ease-in-out;
+  fill: #e54d26;
+}
+
+.animate-html-icon #inner-letter {
+  -webkit-animation: resize-letter 1.2s ease;
+          animation: resize-letter 1.2s ease;
+  -webkit-transform-origin: 50% 57%;
+          transform-origin: 50% 57%;
+}
+
+@-webkit-keyframes resize-letter {
+  50% {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes resize-letter {
+  50% {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.animate-js-icon #JS-icon {
+  min-width: 88px;
+}
+
+.animate-js-icon #JS-icon circle {
+  -webkit-transition: fill 0.6s ease-in-out;
+  transition: fill 0.6s ease-in-out;
+  fill: #f0db4f;
+}
+
+.animate-js-icon #JS-icon #J-letter {
+  -webkit-animation: resize-letter 1.2s ease;
+          animation: resize-letter 1.2s ease;
+}
+
+.animate-js-icon #JS-icon #S-letter {
+  -webkit-animation: resize-letter 1.2s ease;
+          animation: resize-letter 1.2s ease;
+}
+
+.animate-js-icon #J-letter,
+.animate-js-icon #S-letter {
+  -webkit-transform-origin: 50% 57%;
+          transform-origin: 50% 57%;
+}
+
+.animate-react-icon #react-icon .st0 {
+  fill: #00d8ff;
+  -webkit-animation: rotateZ 5s ease;
+          animation: rotateZ 5s ease;
+}
+
+.animate-react-icon #react-icon #circle {
+  -webkit-animation: resize-letter 5s ease;
+          animation: resize-letter 5s ease;
+}
+
+.animate-react-icon #react-icon .st0,
+.animate-react-icon #react-icon #circle {
+  -webkit-transform-origin: center;
+          transform-origin: center;
+}
+
+@-webkit-keyframes rotateZ {
+  to {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+@keyframes rotateZ {
+  to {
+    -webkit-transform: rotateZ(360deg);
+            transform: rotateZ(360deg);
+  }
+}
+
+/*Animace na hover*/
+/*Ikona překladatel*/
+#lang-skill-icon {
+  width: 70px;
+  padding-top: 6px;
+  -webkit-transition: -webkit-animation 1.5s;
+  transition: -webkit-animation 1.5s;
+  transition: animation 1.5s;
+  transition: animation 1.5s, -webkit-animation 1.5s;
+}
+
+#lang-skill-icon:hover #earth {
+  -webkit-animation: rotateY 2s ease;
+          animation: rotateY 2s ease;
+}
+
+#lang-skill-icon:hover #border {
+  -webkit-animation: resize 1.2s ease;
+          animation: resize 1.2s ease;
+}
+
+#earth,
+#border {
+  -webkit-transform-origin: center;
+          transform-origin: center;
+}
+
+@keyframes rotateY {
+  to {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+}
+
+@keyframes resize {
+  50% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 /*Ikona HTML*/
 #html-icon {
   display: block;
@@ -446,17 +581,6 @@ section {
 #inner-letter {
   -webkit-transform-origin: 50% 57%;
           transform-origin: 50% 57%;
-}
-
-@-webkit-keyframes resize-letter {
-  50% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
-  }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
 }
 
 @keyframes resize-letter {
@@ -522,13 +646,6 @@ section {
 #circle {
   -webkit-transform-origin: center;
           transform-origin: center;
-}
-
-@-webkit-keyframes rotateZ {
-  to {
-    -webkit-transform: rotateZ(360deg);
-            transform: rotateZ(360deg);
-  }
 }
 
 @keyframes rotateZ {
