--- a/styles.scss
+++ b/styles.scss
@@ -134,7 +134,7 @@ section {
 }
 
 .my-work {
-  background-color: $odd-background-color;  
+  background-color: $odd-background-color;    
  h2 {
    color: $contrast-color;
  }
@@ -291,7 +291,100 @@ section {
 }
 
 /*--------------Animace SVG ikon----------------*/
+/*Animace na scroll down - spouštěná JS*/
 
+.animate-lang-icon {  
+  transition: animation 1.5s;
+  #earth {
+    animation: rotateY 2s ease;
+  }
+  #border {
+    animation: resize 1.2s ease;
+  }
+  #earth,
+#border {
+  transform-origin: center;
+}
+
+@keyframes rotateY {
+  to {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes resize {
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+}
+
+.animate-html-icon {
+  #html-icon {
+    transition: fill 0.4s ease-in-out;
+    fill: #e54d26;
+  }
+  #inner-letter {
+    animation: resize-letter 1.2s ease;
+    transform-origin: 50% 57%;
+  }
+@keyframes resize-letter {
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+}
+
+.animate-js-icon {
+  #JS-icon {
+    min-width: 88px;  
+    circle {
+        transition: fill 0.6s ease-in-out;
+        fill:#f0db4f;
+      }
+    #J-letter {
+        animation: resize-letter 1.2s ease;
+      }
+    #S-letter {
+        animation: resize-letter 1.2s ease;
+      }    
+  }  
+  #J-letter,
+  #S-letter {
+    transform-origin: 50% 57%;
+  }
+}
+
+.animate-react-icon {
+  #react-icon {
+      .st0 {
+        fill: #00d8ff;
+        animation: rotateZ 5s ease;
+      }
+      #circle {
+        animation: resize-letter 5s ease;
+      }     
+  .st0,
+  #circle {
+    transform-origin: center;
+  }
+  @keyframes rotateZ {
+    to {
+      transform: rotateZ(360deg);
+    }
+  }
+}
+}
+
+
+
+/*Animace na hover*/
 /*Ikona překladatel*/
 #lang-skill-icon {
   width: 70px;
@@ -372,7 +465,6 @@ section {
     }
   }
 }
-
 #J-letter,
 #S-letter {
   transform-origin: 50% 57%;
